2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.Autotools.csproj: More refs to keep csc happy.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.Autotools.csproj: Don't local-copy other addins'
	  dlls.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.Autotools.csproj: More explicit references to keep
	  csc happy.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.Autotools.mdp:
	* CBinding.Autotools.csproj: Migrated to MSBuild file format.
